fix button row overflow

--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -11,7 +11,6 @@
   */
   margin-bottom: 32px;
   max-width: 50%;
-  overflow-x: auto;
 }
 
 .title {
